Fix contrast issues

--- a/packages/dev/docs/src/docs.css
+++ b/packages/dev/docs/src/docs.css
@@ -69,10 +69,14 @@ html, body {
   --page-background: var(--spectrum-global-color-gray-50);
   background: var(--page-background) !important;
   color-scheme: light dark;
+  --blue: #0040ff;
+  --gray: #6f6f6f;
 }
 
 .dark {
   --page-background: var(--spectrum-global-color-gray-75);
+  --blue: dodgerblue;
+  --gray: #868686;
   .example {
     background-color: var(--spectrum-global-color-gray-100);
   }
